public/css/node-web.scss
/* ... */
#app {
  width: 100%;
}
.section-info,
.sticky-overview,
.preview-side-menu,
.preview-content-right {
  p,
  ul {
    @extend %short-text-font-style;
  }
}

.word-break {
  p {
    word-break: break-word;
  }
}

//person
.person {
  margin-bottom: 0.3rem;
}
.fa,
.fas {
  font-weight: 900;
}

.kip-container {
  padding-top: 2em;
  margin-bottom: 4.5em;
  width: 100%;
  .progress-bar-container.row {
    margin: 0;
    div {
      &:first-of-type {
        text-align: left;
      }
      &:nth-of-type(2) {
        text-align: center;
      }
      &:nth-of-type(3) {
        text-align: right;
        padding-right: 0;
      }
    }
  }
  .container.First--Step--Choose--Parameters {
    padding: 0 0 50px 0;
  }
  .title-and-info > h3 {
    margin-top: 15px;
  }
  .alert {
    margin-bottom: 0;
  }
  .element-50 {
    margin-bottom: 0;
    margin-top: 50px;
  }
  .section-50 {
    //row
    margin-bottom: 0;
    padding-top: 50px;
    & > h2:first-child {
      margin-top: 0;
    }
    .col {
      margin-bottom: 0;
    }
  }
  .tab-bar-container .nav.nav-tabs {
    border-bottom: solid 1px $grey;

    .nav-link {
      padding-right: 1.06em;
      padding-left: 1.06em;
      // större kontrasten
      border-color: $grey;

      &.active {
        font-weight: 700 !important;
        border-bottom: none;
      }
      &[aria-selected='false'] {
        border-bottom: solid 1px $grey;
        padding-bottom: 7.4px;
      }
    }
  }

  //.sections-list-80 FOR LIST VIEW
  .sections-list-80 {
    //row
    margin-bottom: 0;
    padding-top: 80px;
    &:first-of-type {
      padding-top: 0;
    }
    & > h2:first-child {
      margin-top: 0;
    }
    .col {
      margin-bottom: 0;
    }
  }
  .form-group:last-of-type {
    margin-bottom: 0;
  }
  .error-area {
    .form-group:last-of-type {
      margin-bottom: 0.3em;
    }
  }
  .subsection-30 {
    padding-top: 30px;

    .title-and-info > h3 {
      margin-top: 0;
      padding-top: 0;
    }
  }
  .subSection {
    .section-info {
      margin-top: 30px;
      // padding-top: 50px;
    }
  }
  .first-15 {
    padding-top: 15px;
  }
  .vertical-separator {
    max-width: 15%;
  }

  .upper-alert {
    .alert {
      margin-bottom: 5px;
      margin-left: 0;
      margin-right: 0;
      width: 100%;
      .btn-link {
        margin: 0;
        padding: 0;
        font-size: inherit;
      }
    }
    &:last-child {
      margin-bottom: 0;
    }
  }
}

.Added--New--Title--And--Info {
  & > .section-info {
    margin-top: 50px;
    margin-bottom: 0; //editor is open
  }
  .title-and-info + .section-info {
    margin-top: 0;
  }
  .form-group.title {
    margin-top: 0;
    margin-bottom: 15px;
  }
  .error-label {
    color: $red;
    font-weight: normal;
  }
}

//BUTTONS STYLES
.control-buttons {
  @extend %column;
  border-top: 1px solid $grey;
  padding-bottom: 25px;
  // padding-top: 1.5em;

  @media (min-width: 768px) {
    flex-direction: row;
    margin: 0;
    width: 100%;
    .btn-middle {
      text-align: center;
    }
    .btns-helpers {
      padding-left: 0;
    }
    span:nth-of-type(2) > .btn {
      margin-left: 1.25em;
    }
  }
}

.btn-secondary {
  background-color: #f6f6f6;
}

.btns-helpers {
  padding-left: 0;
}

.step-forward,
.btn-last {
  padding-right: 0;
}

.btn-info-modal {
  margin-left: 10px;
}

//Edit page
//tabs
#sectionsTabPanel {
  a {
    @extend %short-text-font-style;
  }
}
//Edit content
.memo-container > .row {
  margin-left: 0;
  margin-right: 0;
}
.white-space-under-tabs {
  // under sticky tab white space
  height: 30px;
  border-right: 1px solid $grey;
  border-left: 1px solid $grey;
}
.memo-content.tab-content {
  // border-top: 1px solid $borderGrey;
  padding-bottom: 5em;
  border-right: none;
  border-bottom: none;
  border-top: none;
  & + .vertical-separator {
    border-right: 1px solid $borderGrey;
    border-top: none;
    margin-right: 50px;
  }
  &:first-of-type {
    padding-top: 0;
  }
  & > h2:first-child {
    margin-top: 0;
  }
  .col {
    margin-bottom: 0;
  }
  h2 {
    margin-bottom: -29px;
  }
  .tab-pane {
    padding-top: 0;
    border-color: $grey;
  }
  .title-and-info {
    margin-top: 35px; //h3 15px + 34.88px
  }
  p,
  ul,
  span {
    &:last-of-type {
      margin-bottom: 0;
    }
  }
  ul {
    margin-top: 1em;
    padding-left: 20px;
  }
  span:first-of-type h2 {
    margin-top: 0;
  }
  .section-info + span > p {
    // max-width: 730px;
    margin-top: 1em;
  }
  .title-and-info + p {
    font-weight: 900;
  }
  .details-about-each-section {
    margin-top: 3em;
  }
}

.sticky-overview {
  @extend %bordered-area;
  border-color: $grey;
  border-top-right-radius: 0;
  border-left: none;
  border-bottom: none;
  padding-left: 0;

  #mainMenu {
    margin-top: 10px;
  }

  @media (min-width: 992px) {
    #mainMenu.col {
      max-width: 250px;
    }
    #mainMenu.col.navbar {
      padding-top: 28px;
    }
    .progress-title {
      display: flex !important;
    }
  }

  .content-overview {
    .nav-link-to-content-header {
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    svg {
      // visibility, eye icon
      margin-left: 15px;
    }
  }
}

span.section-info {
  @extend %row;
  justify-content: space-between;
  padding-top: 10px; // + button = 20px
  .mandatory {
    margin-top: 5px; //  = 20px
  }
}
.section_info_visibility_label {
  @extend %react-icon-basic;
  margin-right: 0.63em; //10.08px
  .source::before {
    content: '|';
    font-weight: normal;
    margin-right: 1.25em;
    margin-left: 1.25em;
  }
}
.section_info_visibility_icon_v {
  @extend %react-icon-basic;
  margin: 0 1.25em 0 0; //20.8px
}
.section_info_visibility_icon {
  @extend %react-icon-basic;
}

.step-forward,
.btn-last,
.btn-middle {
  text-align: end;
}

.change-view {
  text-align: end;
  vertical-align: middle;
  margin-top: 28px;
}

a.nav-link {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
/* ... */

